# chat

./: .gitignore  pyproject.toml  render.yaml
admin/: index.html  login.html
admin/css/: admin.css
admin/js/: admin.js
backend/: .env  auth.py  database.py  email-service.py  email_service.py  main.py  models.py  requirements.txt  websocket-manager.py  websocket_manager.py
database/: chat.db
frontend/: chat.html  index.html  index.html.backup  login.html  register.html
frontend/backup/: index.html  login.html
frontend/css/: styles.css
frontend/js/: api.js  auth.js  chat.js  main.js
